# Food-sustainability-smc

./: .env  .env.example  DATA_MODEL_METHODOLOGY.md  Dockerfile  INTERVIEW_CODEBASE_STUDY.md  PROJECT_WORKFLOW.md  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.py  setup.bat
agentic/: app.py
api/: main.py
chatbot/: app.py
config/: mcporter.json
dashboard/: app.py
data/: export_csv.py  export_random_csv_bundle.py  load_csv_to_duckdb.py  load_duckdb.py  seed_database.py
data/kaggle_export/: dataset-metadata.json
data/kaggle_export/analytics/: carbon_footprint_summary.csv  daily_store_sales.csv  event_impact_analysis.csv  monthly_waste_by_category.csv  perishable_risk_matrix.csv  product_waste_analysis.csv  store_performance.csv  weather_impact.csv  weekly_category_trends.csv
data/kaggle_export/raw/: events.csv  inventory.csv  products.csv  stores.csv  supplier_products.csv  suppliers.csv  weather.csv
database/: db.py
mcp/: project_context_server.py
metabase-plugins/: sample-database.db.mv.db
models/: carbon_calculator.py  demand_forecaster.py  route_optimizer.py  waste_cascade.py
pages/: 1_dashboard.py  2_chatbot.py  3_agentic.py
reports/: FoodFlow_AI_Sustainability_Report_2025.docx
scripts/: bootstrap.sh  docker-entrypoint.sh  run_metabase_local.sh  run_project_mcp.sh  setup_uv.sh
utils/: helpers.py  knowledge_base.py
