[project]
name = "foodflow-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "duckdb>=1.4.0",
    "fastapi>=0.128.8",
    "fastmcp>=2.14.5",
    "folium>=0.20.0",
    "httpx>=0.28.1",
    "mistralai>=1.12.1",
    "numpy>=2.4.2",
    "ortools>=9.15.6755",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "streamlit>=1.54.0",
    "streamlit-folium>=0.26.1",
    "uvicorn>=0.40.0",
    "xgboost>=3.2.0",
]
